simplejava.java
/* simplejava.java */
/* Generated By:JavaCC: Do not edit this line. simplejava.java */
public class simplejava implements simplejavaConstants {

/*-----------------------------------------------------------------------*/
  //  Statement
  //
  /*-----------------------------------------------------------------------*/
  static final public 
    ASTStatement statement() throws ParseException {ASTStatement s = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LEFTBRACE:{
      /* Checks all statements here */
      
              s = blockStatement();
{if ("" != null) return s;}
      break;
      }
    default:
      jj_la1[0] = jj_gen;
      if (jj_2_1(2)) {
        s = variableDeclarationStatement();
{if ("" != null) return s;}
      } else if (jj_2_2(2)) {
        s = functionCallStatement();
{if ("" != null) return s;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFIER:{
          s = variableStatement();
{if ("" != null) return s;}
          break;
          }
        case IF:{
          s = ifStatement();
{if ("" != null) return s;}
          break;
          }
        case WHILE:{
          s = whileStatement();
{if ("" != null) return s;}
          break;
          }
        case DO:{
          s = doWhileStatement();
{if ("" != null) return s;}
          break;
          }
        case FOR:{
          s = forStatement();
{if ("" != null) return s;}
          break;
          }
        case RETURN:{
          s = returnStatement();
{if ("" != null) return s;}
          break;
          }
        case SEMICOLON:{
          s = emptyStatement();
{if ("" != null) return s;}
          break;
          }
        default:
          jj_la1[1] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTStatements blockStatement() throws ParseException {ASTStatements statements = new ASTStatements();
        ASTStatement statement = null;
    jj_consume_token(LEFTBRACE);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FOR:
      case DO:
      case IF:
      case WHILE:
      case RETURN:
      case IDENTIFIER:
      case LEFTBRACE:
      case SEMICOLON:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
      statement = statement();
statements.addElement(statement);
    }
    jj_consume_token(RIGHTBRACE);
{if ("" != null) return statements;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTAssignmentStatement variableStatement() throws ParseException {ASTVariable variable = null;
        ASTAssignmentStatement statement = null;
        ASTOperatorExpression opEx = null;
    variable = variable();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GETS:{
      statement = assignmentStatement();
statement.setvariable(variable);
      break;
      }
    case INCREMENT:
    case DECREMENT:{
      opEx = incDecStatement();
opEx.setleft(new ASTVariableExpression(variable, variable.line())) ;
          statement = new ASTAssignmentStatement(variable, opEx, variable.line());
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
{if ("" != null) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTAssignmentStatement assignmentStatement() throws ParseException {ASTExpression value = null;
        Token op = null;
    op = jj_consume_token(GETS);
    value = expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMICOLON:{
      jj_consume_token(SEMICOLON);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
{if ("" != null) return new ASTAssignmentStatement(null, value, op.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTOperatorExpression incDecStatement() throws ParseException {ASTOperatorExpression val = null;
        ASTExpression incDec = null;
        Token t = null;
        int operator = 0;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INCREMENT:{
      t = jj_consume_token(INCREMENT);
operator = 1;
      break;
      }
    case DECREMENT:{
      t = jj_consume_token(DECREMENT);
operator = 2;
      break;
      }
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
incDec = new ASTIntegerLiteral(1, t.beginLine);

        val = new ASTOperatorExpression(null, incDec, operator, t.beginLine);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SEMICOLON:{
      jj_consume_token(SEMICOLON);
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
{if ("" != null) return val;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTVariableDefStatement variableDeclarationStatement() throws ParseException {Token type = null;
        Token name = null;
        ASTExpression init = null;
        int arraydimension = 0;
    type = jj_consume_token(IDENTIFIER);
    name = jj_consume_token(IDENTIFIER);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LEFTBRACKET:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_2;
      }
      jj_consume_token(LEFTBRACKET);
      jj_consume_token(RIGHTBRACKET);
arraydimension++;
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case GETS:{
      jj_consume_token(GETS);
      init = expression();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
if (init == null && arraydimension == 0) {
              {if ("" != null) return new ASTVariableDefStatement(type.image, name.image, name.beginLine);}
          } else if (init == null && arraydimension > 0) {
              {if ("" != null) return new ASTVariableDefStatement(type.image, name.image, arraydimension, name.beginLine);}
          } else if (init != null && arraydimension == 0) {
              {if ("" != null) return new ASTVariableDefStatement(type.image, name.image, init, name.beginLine);}
          } else {
              {if ("" != null) return new ASTVariableDefStatement(type.image, name.image, arraydimension, init, name.beginLine);}
          }
    throw new Error("Missing return statement in function");
  }

  static final public ASTIfStatement ifStatement() throws ParseException {ASTExpression test = null;
        ASTStatement then = null;
        ASTStatement elseStatement = null;
        Token op = null;
    op = jj_consume_token(IF);
    jj_consume_token(LEFTPARENTHESIS);
    test = expression();
    jj_consume_token(RIGHTPARENTHESIS);
    then = statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      elseStatement = statement();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      ;
    }
{if ("" != null) return new ASTIfStatement(test, then, elseStatement, op.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTWhileStatement whileStatement() throws ParseException {ASTExpression test = null;
        ASTStatement body = null;
        Token op = null;
    op = jj_consume_token(WHILE);
    jj_consume_token(LEFTPARENTHESIS);
    test = expression();
    jj_consume_token(RIGHTPARENTHESIS);
    body = statement();
{if ("" != null) return new ASTWhileStatement(test, body, op.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTDoWhileStatement doWhileStatement() throws ParseException {ASTExpression test = null;
        ASTStatement body = null;
        Token op = null;
    op = jj_consume_token(DO);
    body = statement();
    jj_consume_token(WHILE);
    jj_consume_token(LEFTPARENTHESIS);
    test = expression();
    jj_consume_token(RIGHTPARENTHESIS);
    jj_consume_token(SEMICOLON);
{if ("" != null) return new ASTDoWhileStatement(test, body, op.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTForStatement forStatement() throws ParseException {ASTStatement init = null;
        ASTExpression test = null;
        ASTStatement incr = null;
        ASTStatement body = null;
        Token op = null;
    op = jj_consume_token(FOR);
    jj_consume_token(LEFTPARENTHESIS);
    init = statement();
    test = expression();
    jj_consume_token(SEMICOLON);
    incr = statement();
    jj_consume_token(RIGHTPARENTHESIS);
    body = statement();
{if ("" != null) return new ASTForStatement(init, test, incr, body, op.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTFunctionCallStatement functionCallStatement() throws ParseException {ASTFunctionCallStatement funcCall = null;
        Token name = null;
        ASTExpression formal = null;
    name = jj_consume_token(IDENTIFIER);
    jj_consume_token(LEFTPARENTHESIS);
funcCall = new ASTFunctionCallStatement(name.image, name.beginLine);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case FALSE:
      case TRUE:
      case NEW:
      case INTEGER_LITERAL:
      case IDENTIFIER:
      case MINUS:
      case LEFTPARENTHESIS:
      case NOT:{
        ;
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        break label_3;
      }
      formal = arguments();
funcCall.addElement(formal);
    }
    jj_consume_token(RIGHTPARENTHESIS);
    jj_consume_token(SEMICOLON);
{if ("" != null) return funcCall;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTReturnStatement returnStatement() throws ParseException {ASTExpression value = null;
        Token op = null;
    op = jj_consume_token(RETURN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FALSE:
    case TRUE:
    case NEW:
    case INTEGER_LITERAL:
    case IDENTIFIER:
    case MINUS:
    case LEFTPARENTHESIS:
    case NOT:{
      value = expression();
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(SEMICOLON);
{if ("" != null) return new ASTReturnStatement(value, op.beginLine);}
    throw new Error("Missing return statement in function");
  }

  static final public ASTEmptyStatement emptyStatement() throws ParseException {Token op = null;
    op = jj_consume_token(SEMICOLON);
{if ("" != null) return new ASTEmptyStatement(op.beginLine);}
    throw new Error("Missing return statement in function");
  }

/*-----------------------------------------------------------------------*/
  //  Expression
  //
  /*-----------------------------------------------------------------------*/
  static final public 


    ASTExpression expression() throws ParseException {ASTExpression exp = null, exp2 = null;
        Token t = null;
    exp = expression0();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      t = jj_consume_token(OR);
      exp2 = expression0();
exp = new ASTOperatorExpression(exp, exp2, t.image, exp.line());
    }
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public Token compareOps() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case EQUAL:{
      t = jj_consume_token(EQUAL);
{if ("" != null) return t;}
      break;
      }
    case NOTEQUAL:{
      t = jj_consume_token(NOTEQUAL);
{if ("" != null) return t;}
      break;
      }
    case LESSTHAN:{
      t = jj_consume_token(LESSTHAN);
{if ("" != null) return t;}
      break;
      }
    case GREATERTHAN:{
      t = jj_consume_token(GREATERTHAN);
{if ("" != null) return t;}
      break;
      }
    case LESSTHANOREQUAL:{
      t = jj_consume_token(LESSTHANOREQUAL);
{if ("" != null) return t;}
      break;
      }
    case GREATERTHANOREQUAL:{
      t = jj_consume_token(GREATERTHANOREQUAL);
{if ("" != null) return t;}
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression expression0() throws ParseException {ASTExpression exp = null, exp2 = null;
        Token t;
    exp = expression1();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_5;
      }
      t = jj_consume_token(AND);
      exp2 = expression1();
exp = new ASTOperatorExpression(exp, exp2, t.image, exp.line());
    }
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression expression1() throws ParseException {ASTExpression exp = null, exp2 = null;
        Token t;
    exp = expression2();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case EQUAL:
      case NOTEQUAL:
      case LESSTHAN:
      case GREATERTHAN:
      case LESSTHANOREQUAL:
      case GREATERTHANOREQUAL:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_6;
      }
      t = compareOps();
      exp2 = expression2();
exp = new ASTOperatorExpression(exp, exp2, t.image, exp.line());
    }
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression expression2() throws ParseException {ASTExpression exp = null, exp2 = null;
        Token t;
    exp = expression3();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MINUS:
      case PLUS:{
        ;
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        t = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        t = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      exp2 = expression3();
exp = new ASTOperatorExpression(exp, exp2, t.image, exp.line());
    }
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression expression3() throws ParseException {ASTExpression exp = null, exp2 = null;
        Token t;
    exp = expression4();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MULTIPLY:{
        t = jj_consume_token(MULTIPLY);
        break;
        }
      case DIVIDE:{
        t = jj_consume_token(DIVIDE);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      exp2 = expression4();
exp = new ASTOperatorExpression(exp, exp2, t.image, exp.line());
    }
{if ("" != null) return exp;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTExpression expression4() throws ParseException {ASTExpression exp = null, zero = null;
        Token t = null, t0 = null;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NOT:{
      t = jj_consume_token(NOT);
      exp = expression();
{if ("" != null) return new ASTUnaryOperatorExpression(exp, ASTUnaryOperatorExpression.NOT, t.beginLine);}
      break;
      }
    case MINUS:{
      t = jj_consume_token(MINUS);
      exp = expression();
zero = new ASTIntegerLiteral(0, t.beginLine);
{if ("" != null) return new ASTOperatorExpression(zero, exp, ASTOperatorExpression.MINUS, t.beginLine);}
      break;
      }
    case LEFTPARENTHESIS:{
      jj_consume_token(LEFTPARENTHESIS);
      exp = expression();
      jj_consume_token(RIGHTPARENTHESIS);
{if ("" != null) return exp;}
      break;
      }
    case FALSE:
    case TRUE:
    case NEW:
    case INTEGER_LITERAL:
    case IDENTIFIER:{
      exp = term();
{if ("" != null) return exp;}
      break;
      }
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
